[gd_scene load_steps=10 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]
[ext_resource path="res://Montserrat-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/checkboxes/unchecked.png" type="Texture" id=3]
[ext_resource path="res://images/checkboxes/checked.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 72
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 1024 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 40
custom_constants/margin_left = 10
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 40.0
margin_right = 639.0
margin_bottom = 984.0
size_flags_horizontal = 3

[node name="ExercisesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 629.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "VIEW_EXERCISES"

[node name="TensToggle" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 629.0
margin_bottom = 120.0
focus_mode = 0
custom_icons/off = ExtResource( 3 )
custom_icons/on = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
pressed = true
enabled_focus_mode = 0
text = "VIEW_TENS"

[node name="DoublesToggle" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 629.0
margin_bottom = 180.0
focus_mode = 0
custom_icons/off = ExtResource( 3 )
custom_icons/on = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
pressed = true
enabled_focus_mode = 0
text = "VIEW_DOUBLES"

[node name="CompareToggle" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 629.0
margin_bottom = 240.0
focus_mode = 0
custom_icons/off = ExtResource( 3 )
custom_icons/on = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
pressed = true
enabled_focus_mode = 0
text = "VIEW_COMPARE"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 629.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 80 )

[node name="NoOfExLabels" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 629.0
margin_bottom = 388.0
custom_fonts/font = SubResource( 1 )
text = "VIEW_NO_OF_EXERCISES"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 629.0
margin_bottom = 487.0

[node name="PlusButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "+"
flat = true

[node name="NoOfExLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 99.0
margin_top = 25.0
margin_right = 530.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "##"
align = 1
valign = 1

[node name="MinusButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 534.0
margin_right = 629.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "-"
flat = true

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 491.0
margin_right = 629.0
margin_bottom = 845.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 849.0
margin_right = 629.0
margin_bottom = 944.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "VIEW_BACK"
flat = true
[connection signal="toggled" from="MarginContainer/VBoxContainer/TensToggle" to="." method="_on_TensToggle_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/DoublesToggle" to="." method="_on_DoublesToggle_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CompareToggle" to="." method="_on_CompareToggle_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PlusButton" to="." method="_on_PlusButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
